// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`it ovderrides the expected resources 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "HasEnvironmentParameter": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "referencetotransformerrootstackenv10C5A902Ref",
            },
            "NONE",
          ],
        },
      ],
    },
  },
  "Description": "An auto-generated nested stack for the @function directive.",
  "Parameters": {
    "referencetotransformerrootstackGraphQLAPI20497F53ApiId": {
      "Type": "String",
    },
    "referencetotransformerrootstackS3DeploymentBucket7592718ARef": {
      "Type": "String",
    },
    "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref": {
      "Type": "String",
    },
    "referencetotransformerrootstackenv10C5A902Ref": {
      "Type": "String",
    },
  },
  "Resources": {
    "EchofunctionLambdaDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "LambdaConfig": {
          "LambdaFunctionArn": {
            "Fn::If": [
              "HasEnvironmentParameter",
              {
                "Fn::Sub": [
                  "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction-\${env}",
                  {
                    "env": {
                      "Ref": "referencetotransformerrootstackenv10C5A902Ref",
                    },
                  },
                ],
              },
              {
                "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction",
              },
            ],
          },
        },
        "Name": "EchofunctionLambdaDataSource",
        "ServiceRoleArn": "mockArn",
        "Type": "AWS_LAMBDA",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "EchofunctionLambdaDataSourceServiceRole3BE2FA57": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "EchofunctionLambdaDataSourceServiceRoleDefaultPolicyCAA363A9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::If": [
                    "HasEnvironmentParameter",
                    {
                      "Fn::Sub": [
                        "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction-\${env}",
                        {
                          "env": {
                            "Ref": "referencetotransformerrootstackenv10C5A902Ref",
                          },
                        },
                      ],
                    },
                    {
                      "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction",
                    },
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::If": [
                          "HasEnvironmentParameter",
                          {
                            "Fn::Sub": [
                              "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction-\${env}",
                              {
                                "env": {
                                  "Ref": "referencetotransformerrootstackenv10C5A902Ref",
                                },
                              },
                            ],
                          },
                          {
                            "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction",
                          },
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EchofunctionLambdaDataSourceServiceRoleDefaultPolicyCAA363A9",
        "Roles": [
          {
            "Ref": "EchofunctionLambdaDataSourceServiceRole3BE2FA57",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "InvokeEchofunctionLambdaDataSourceInvokeEchofunctionLambdaDataSourceAppSyncFunctionCDB52C03": {
      "DependsOn": [
        "EchofunctionLambdaDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "EchofunctionLambdaDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "InvokeEchofunctionLambdaDataSource",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/InvokeEchofunctionLambdaDataSource.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/InvokeEchofunctionLambdaDataSource.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "InvokeOtherfunctionLambdaDataSourceInvokeOtherfunctionLambdaDataSourceAppSyncFunctionB834903D": {
      "DependsOn": [
        "OtherfunctionLambdaDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "OtherfunctionLambdaDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "InvokeOtherfunctionLambdaDataSource",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/InvokeOtherfunctionLambdaDataSource.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/InvokeOtherfunctionLambdaDataSource.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "OtherfunctionLambdaDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "LambdaConfig": {
          "LambdaFunctionArn": {
            "Fn::If": [
              "HasEnvironmentParameter",
              {
                "Fn::Sub": [
                  "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                  {},
                ],
              },
              {
                "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
              },
            ],
          },
        },
        "Name": "OtherfunctionLambdaDataSource",
        "ServiceRoleArn": "mockArn",
        "Type": "AWS_LAMBDA",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "OtherfunctionLambdaDataSourceServiceRole611EC792": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "OtherfunctionLambdaDataSourceServiceRoleDefaultPolicy3263A5C1": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::If": [
                    "HasEnvironmentParameter",
                    {
                      "Fn::Sub": [
                        "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                        {},
                      ],
                    },
                    {
                      "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                    },
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::If": [
                          "HasEnvironmentParameter",
                          {
                            "Fn::Sub": [
                              "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                              {},
                            ],
                          },
                          {
                            "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                          },
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "OtherfunctionLambdaDataSourceServiceRoleDefaultPolicy3263A5C1",
        "Roles": [
          {
            "Ref": "OtherfunctionLambdaDataSourceServiceRole611EC792",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "QueryechoResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "echo",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "InvokeEchofunctionLambdaDataSourceInvokeEchofunctionLambdaDataSourceAppSyncFunctionCDB52C03",
                "FunctionId",
              ],
            },
            {
              "Fn::GetAtt": [
                "InvokeOtherfunctionLambdaDataSourceInvokeOtherfunctionLambdaDataSourceAppSyncFunctionB834903D",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "mockTemplate",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Query.echo.res.vtl",
            ],
          ],
        },
        "TypeName": "Query",
      },
      "Type": "AWS::AppSync::Resolver",
    },
  },
}
`;

exports[`it skips override if override file does not exist 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "HasEnvironmentParameter": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "referencetotransformerrootstackenv10C5A902Ref",
            },
            "NONE",
          ],
        },
      ],
    },
  },
  "Description": "An auto-generated nested stack for the @function directive.",
  "Parameters": {
    "referencetotransformerrootstackGraphQLAPI20497F53ApiId": {
      "Type": "String",
    },
    "referencetotransformerrootstackS3DeploymentBucket7592718ARef": {
      "Type": "String",
    },
    "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref": {
      "Type": "String",
    },
    "referencetotransformerrootstackenv10C5A902Ref": {
      "Type": "String",
    },
  },
  "Resources": {
    "EchofunctionLambdaDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "LambdaConfig": {
          "LambdaFunctionArn": {
            "Fn::If": [
              "HasEnvironmentParameter",
              {
                "Fn::Sub": [
                  "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction-\${env}",
                  {
                    "env": {
                      "Ref": "referencetotransformerrootstackenv10C5A902Ref",
                    },
                  },
                ],
              },
              {
                "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction",
              },
            ],
          },
        },
        "Name": "EchofunctionLambdaDataSource",
        "ServiceRoleArn": {
          "Fn::GetAtt": [
            "EchofunctionLambdaDataSourceServiceRole3BE2FA57",
            "Arn",
          ],
        },
        "Type": "AWS_LAMBDA",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "EchofunctionLambdaDataSourceServiceRole3BE2FA57": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "EchofunctionLambdaDataSourceServiceRoleDefaultPolicyCAA363A9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::If": [
                    "HasEnvironmentParameter",
                    {
                      "Fn::Sub": [
                        "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction-\${env}",
                        {
                          "env": {
                            "Ref": "referencetotransformerrootstackenv10C5A902Ref",
                          },
                        },
                      ],
                    },
                    {
                      "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction",
                    },
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::If": [
                          "HasEnvironmentParameter",
                          {
                            "Fn::Sub": [
                              "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction-\${env}",
                              {
                                "env": {
                                  "Ref": "referencetotransformerrootstackenv10C5A902Ref",
                                },
                              },
                            ],
                          },
                          {
                            "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:echofunction",
                          },
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EchofunctionLambdaDataSourceServiceRoleDefaultPolicyCAA363A9",
        "Roles": [
          {
            "Ref": "EchofunctionLambdaDataSourceServiceRole3BE2FA57",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "InvokeEchofunctionLambdaDataSourceInvokeEchofunctionLambdaDataSourceAppSyncFunctionCDB52C03": {
      "DependsOn": [
        "EchofunctionLambdaDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "EchofunctionLambdaDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "InvokeEchofunctionLambdaDataSource",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/InvokeEchofunctionLambdaDataSource.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/InvokeEchofunctionLambdaDataSource.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "InvokeOtherfunctionLambdaDataSourceInvokeOtherfunctionLambdaDataSourceAppSyncFunctionB834903D": {
      "DependsOn": [
        "OtherfunctionLambdaDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "OtherfunctionLambdaDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "InvokeOtherfunctionLambdaDataSource",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/InvokeOtherfunctionLambdaDataSource.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/InvokeOtherfunctionLambdaDataSource.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "OtherfunctionLambdaDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "LambdaConfig": {
          "LambdaFunctionArn": {
            "Fn::If": [
              "HasEnvironmentParameter",
              {
                "Fn::Sub": [
                  "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                  {},
                ],
              },
              {
                "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
              },
            ],
          },
        },
        "Name": "OtherfunctionLambdaDataSource",
        "ServiceRoleArn": {
          "Fn::GetAtt": [
            "OtherfunctionLambdaDataSourceServiceRole611EC792",
            "Arn",
          ],
        },
        "Type": "AWS_LAMBDA",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "OtherfunctionLambdaDataSourceServiceRole611EC792": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "OtherfunctionLambdaDataSourceServiceRoleDefaultPolicy3263A5C1": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::If": [
                    "HasEnvironmentParameter",
                    {
                      "Fn::Sub": [
                        "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                        {},
                      ],
                    },
                    {
                      "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                    },
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::If": [
                          "HasEnvironmentParameter",
                          {
                            "Fn::Sub": [
                              "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                              {},
                            ],
                          },
                          {
                            "Fn::Sub": "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:otherfunction",
                          },
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "OtherfunctionLambdaDataSourceServiceRoleDefaultPolicy3263A5C1",
        "Roles": [
          {
            "Ref": "OtherfunctionLambdaDataSourceServiceRole611EC792",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "QueryechoResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "echo",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "InvokeEchofunctionLambdaDataSourceInvokeEchofunctionLambdaDataSourceAppSyncFunctionCDB52C03",
                "FunctionId",
              ],
            },
            {
              "Fn::GetAtt": [
                "InvokeOtherfunctionLambdaDataSourceInvokeOtherfunctionLambdaDataSourceAppSyncFunctionB834903D",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Query"))
$util.qr($ctx.stash.put("fieldName", "echo"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Query.echo.res.vtl",
            ],
          ],
        },
        "TypeName": "Query",
      },
      "Type": "AWS::AppSync::Resolver",
    },
  },
}
`;
